--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h2>My Skills.</h2>
         <div class="skill-row">
           <img class="computer-img" src="computer.png" alt="computer">
-          <h3>Net Working and Web Design </h3>
+          <h3>Networking and Web Design </h3>
           <p>I started my journey three years ago learning how to build and desgin computer networks.</p>
         </div>
         <div class="skill-row">
@@ -39,7 +39,7 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>If you love golf as much as i do  .</h3>
-        <p class="contact-message">Or in need of a web page? Maybe a network desingn, we can talk over a round of golf .</p>
+        <p class="contact-message">Or in need of a web page? Maybe a network design, we can talk over a round of golf .</p>
         <a class="butn" href="mailto:nakelahumphries@gmail.com">CONTACT ME</a>
       </div>
     </div>
